--- a/splitter/main.htm
+++ b/splitter/main.htm
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
-    <title>Canvas</title>
+    <title>Splitter</title>
 </head>
 
 <body>
-    <canvas id="viewer"></canvas>
+
     <script src="./main.js"></script>
 </body>
 
